--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <div class="firsticon">
         <div class="icon">
             <svg role="img" aria-labelledby="logo" class="main-nav__logo__image" xmlns="http://www.w3.org/2000/svg"
-                width="60" height="29" viewBox="0 0 45 21">
+                width="100" height="29" viewBox="0 0 45 21">
                 <title id="logo">Ableton Homepage</title>
                 <path
                     d="M0 0h3v21H0zM6 0h3v21H6zM12 0h3v21h-3zM18 0h3v21h-3zM24 18h21v3H24zM24 12h21v3H24zM24 6h21v3H24zM24 0h21v3H24z">
@@ -167,7 +167,7 @@
         </div>
     </div>   
     
-    <div class="sixteenparent"> 
+      <div class="sixteenparent"> 
         <div class="from">
             <p> Register or Live or Push ></p>
             <p>About Abelton ></p>
@@ -193,9 +193,9 @@
                  <input type="Email" placeholder="  E-mail Address">
                 <div class="sign"> Sign up</div>     
         </div>  
-         </div> 
+         </div>   
     </div> 
-           <div class="seventeenparent">
+            <div class="seventeenparent">
          <div class="draw">
              <h4>Community</h4>
             <p>Find Abelton User groups ></p>
@@ -234,9 +234,9 @@
                 <option>Haiti</option>
             </select>
         </div>
-        </div>
+        </div>  
     </div>   
-      <div class="eighteenparent"> 
+       <div class="eighteenparent"> 
           <div class="contact">
             <p>Contact us</p>
             <p>Press Resources</p>
@@ -257,7 +257,8 @@
                 </svg>
             </div>
         </div>
-    </div>  
+    </div>   -->
+    
 </body>
 
 </html>
